fix another z-index

--- a/_modulo_Start_in_seconds.scss
+++ b/_modulo_Start_in_seconds.scss
@@ -190,7 +190,6 @@
             position: absolute;
             top: -79px;
             left: 579px;
-            z-index: 999;
 
                 & .second-img-2 {
                     width: 250px;
@@ -201,7 +200,7 @@
         .img-up-2 {
             height: 100%;
             position: absolute;
-            top: -81px;
+            top: -63px;
             left: 598px;
 
                 & .third-img-2 {
